--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -3,18 +3,19 @@ layout: archive
 title: "Publications"
 permalink: /publications/
 author_profile: true
-collection: publications
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">
+    You can also find my articles on
+    <a href="{{ site.author.googlescholar }}">my Google Scholar profile</a>.
+  </div>
 {% endif %}
 
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
-  {% for category in site.publication_category  %}
+  {% for category in site.publication_category %}
     {% assign title_shown = false %}
     {% for post in site.publications reversed %}
       {% if post.category != category[0] %}
@@ -32,6 +33,3 @@ collection: publications
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
-
-
-
