--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,6 +5,7 @@ permalink: /talks/
 author_profile: true
 ---
 
+{% comment %}
 {% if site.talkmap_link == true %}
 
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
@@ -14,3 +15,30 @@ author_profile: true
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
+{% endcomment %}
+
+---
+layout: archive
+title: "Talks and presentations"
+permalink: /talks/
+author_profile: true
+---
+
+<h2>Conference Presentations</h2>
+
+<ul>
+  <li>
+    <strong>Poster</strong>, <em>American Society of Human Genetics Annual Meeting</em>,  
+    Virtual Conference, October 2020.
+  </li>
+
+  <li>
+    <strong>Talk</strong>, <em>Department of Biostatistics Seminar</em>,  
+    University of Michigan, March 2023.
+  </li>
+
+  <li>
+    <strong>Poster</strong>, <em>Genetics of Complex Traits Conference</em>,  
+    Cold Spring Harbor, June 2022.
+  </li>
+</ul>
