--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,3 +1,10 @@
+---
+layout: archive
+title: "Talks and presentations"
+permalink: /talks/
+author_profile: true
+---
+
 {% comment %}
 {% if site.talkmap_link == true %}
 
