--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "Conference presentations"
 permalink: /talks/
 author_profile: true
 ---
@@ -17,21 +17,39 @@ author_profile: true
 {% endfor %}
 {% endcomment %}
 
-<h2>Conference Presentations</h2>
-
 <ul>
   <li>
     <strong>Poster</strong>, <em>American Society of Human Genetics Annual Meeting</em>,  
+    Boston, October 2025.
+  </li>
+
+  <li>
+    <strong>Poster</strong>, <em>Eastern North American Region Spring Meeting</em>,  
+    New Orleans, March 2025.
+  </li>
+  
+  <li>
+    <strong>Contributed talk</strong>, <em>Joint Statistical Meetings</em>,  
+    Portland, August 2024.
+  </li>
+  
+  <li>
+    <strong>Poster</strong>, <em>American Society of Human Genetics Annual Meeting</em>,  
+    Washington DC, November 2023.
+  </li>
+  
+  <li>
+    <strong>Poster</strong>, <em>International Chinese Statistical Association Applied Statistics Symposium</em>,  
+    Ann Arbor, June 2023.
+  </li>
+  
+  <li>
+    <strong>Poster</strong>, <em>American Society of Human Genetics Annual Meeting</em>,  
+    Los Angeles, October 2022.
+  </li>
+  
+  <li>
+    <strong>Poster</strong>, <em>American Society of Human Genetics Annual Meeting</em>,  
     Virtual Conference, October 2020.
-  </li>
-
-  <li>
-    <strong>Talk</strong>, <em>Department of Biostatistics Seminar</em>,  
-    University of Michigan, March 2023.
-  </li>
-
-  <li>
-    <strong>Poster</strong>, <em>Genetics of Complex Traits Conference</em>,  
-    Cold Spring Harbor, June 2022.
   </li>
 </ul>
