--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -52,4 +52,9 @@ author_profile: true
     <strong>Poster</strong>, <em>American Society of Human Genetics Annual Meeting</em>,  
     Virtual Conference, October 2020.
   </li>
+
+  <li>
+    <strong>Poster</strong>, <em>Indian Science Congress</em>,  
+    Mysore, India, January 2016.
+  </li>
 </ul>
